- added gender to guest model - renamed backroom to guests - removed backroom reducers
