# wc-guest-management.api/swagger.json
@@ -77,6 +77,10 @@
 				"action": {
 					"type": "string",
 					"x-nullable": true
+				},
+				"gender": {
+					"type": "string",
+					"x-nullable": true
 				}
 			},
 			"required": [
